--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anthony Goodman's BlockTrace - Tracking Crypto Scams with Precision</title>
+    <title>Asset Withdrawal Professionals</title>
     <meta name="description" content="Professional cryptocurrency fraud investigation and recovery services. We trace stolen funds, work with exchanges, and connect victims to real legal recovery paths.">
     
     <!-- Fonts -->
@@ -547,7 +547,7 @@
                             </linearGradient>
                         </defs>
                     </svg>
-                    <span class="logo-text">Anthony Goodman's BlockTrace</span>
+                    <span class="logo-text">Asset Withdrawal Professionals</span>
                 </div>
                 
                 <ul class="nav-links">
@@ -568,8 +568,8 @@
         <div class="container">
             <div class="hero-content">
                 <h1>
-                    Anthony Goodman's<br>
-                    <span class="brand">BlockTrace</span>
+                    Asset Withdrawal Professionals<br>
+                    <span class="brand">Asset Withdrawal Professionals</span>
                 </h1>
                 <p class="subtitle">Tracking Crypto Scams with Precision</p>
                 <p class="description">
