--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
                             </linearGradient>
                         </defs>
                     </svg>
-                    <span class="logo-text">Asset Withdrawal Professionals</span>
+                    <span class="logo-text"></span>
                 </div>
                 
                 <ul class="nav-links">
@@ -567,8 +567,7 @@
     <section id="home" class="hero">
         <div class="container">
             <div class="hero-content">
-                <h1>
-                    Asset Withdrawal Professionals<br>
+                <h1><br>
                     <span class="brand">Asset Withdrawal Professionals</span>
                 </h1>
                 <p class="subtitle">Tracking Crypto Scams with Precision</p>
