--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
                 </div>
                 
                 <div class="about-image">
-                    <img src="https://images.unsplash.com/photo-1551808525-51a94da548ce?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&h=600" alt="Cybersecurity professional analyzing blockchain data">
+                    <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?q=80&w=687&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Cybersecurity professional analyzing blockchain data">
                     <div style="position: absolute; inset: 0; background: linear-gradient(to top, rgba(0, 224, 255, 0.2), transparent); border-radius: 16px;"></div>
                 </div>
             </div>
