--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Asset Withdrawal Professionals - Tracking Crypto Scams with Precision</title>
     <meta name="description" content="Professional cryptocurrency fraud investigation and recovery services. We trace stolen funds, work with exchanges, and connect victims to real legal recovery paths.">
-    
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     
