--- a/index.html
+++ b/index.html
@@ -1127,7 +1127,7 @@
             
             <div class="team-grid">
                 <div class="team-card">
-                    <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?q=80&w=687&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Financial Expert" class="team-avatar">
+                    <img src="https://imgpx.com/lvkuULthqTJo.png" alt="Financial Expert" class="team-avatar">
                     <h3 data-translate="expert1-name">Sebastian Silverstein</h3>
                     <div class="role" data-translate="expert1-role">Senior Blockchain Analyst</div>
                     <div class="experience" data-translate="expert1-experience">15 years experience</div>
