--- a/index.html
+++ b/index.html
@@ -1135,7 +1135,7 @@
                 </div>
                 
                 <div class="team-card">
-                    <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?q=80&w=687&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Financial Expert" class="team-avatar">
+                    <img src="https://imgpx.com/nCSbqQWSo40h.png" alt="Financial Expert" class="team-avatar">
                     <h3 data-translate="expert2-name">Anthony Goodman</h3>
                     <div class="role" data-translate="expert2-role">Legal Recovery Specialist</div>
                     <div class="experience" data-translate="expert2-experience">12 years experience</div>
@@ -1151,7 +1151,7 @@
                 </div>
                 
                 <div class="team-card">
-                    <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?q=80&w=687&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Financial Expert" class="team-avatar">
+                    <img src="https://imgpx.com/kRTVW4jJo1X0.png" alt="Financial Expert" class="team-avatar">
                     <h3 data-translate="expert4-name">Thomas Webber</h3>
                     <div class="role" data-translate="expert4-role">Fraud Investigation Lead</div>
                     <div class="experience" data-translate="expert4-experience">7 years experience</div>
