--- a/index.html
+++ b/index.html
@@ -1143,7 +1143,7 @@
                 </div>
                 
                 <div class="team-card">
-                    <img src="https://imgpx.com/0DJixgEiOXrx.png" class="team-avatar">
+                    <img src="https://imgpx.com/HvTUzSrpipYm.png" class="team-avatar">
                     <h3 data-translate="expert3-name">Richard Antonelli</h3>
                     <div class="role" data-translate="expert3-role">Legal Recovery Specialist</div>
                     <div class="experience" data-translate="expert3-experience">10 years experience</div>
