--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Asset Withdrawal Professionals - Tracking Crypto Scams with Precision</title>
+    <title>Asset Withdrawal Professionals - Recovering Crypto Assets with Precision and Integrity</title>
     <meta name="description" content="Professional cryptocurrency fraud investigation and recovery services. We trace stolen funds, work with exchanges, and connect victims to real legal recovery paths.">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
