--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Asset Withdrawal Professionals - Recovering Crypto Assets with Precision and Integrity</title>
-    <meta name="description" content="Professional cryptocurrency fraud investigation and recovery services. We trace stolen funds, work with exchanges, and connect victims to real legal recovery paths.">
+    <meta name="description" content="Professional cryptocurrency fraud investigation and recovery services. We trace stolen funds, coordinate with exchanges, and connect victims to trusted legal recovery — with full transparency and no false promises.">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
     <!-- Fonts -->
