--- a/index.html
+++ b/index.html
@@ -943,7 +943,7 @@
                 </h1>
                 <p class="subtitle" data-translate="hero-subtitle">Tracking Crypto Scams with Precision</p>
                 <p class="description" data-translate="hero-description">
-                    We trace stolen funds, work with exchanges, and connect victims to real legal recovery paths — without false promises.
+                    We trace stolen funds, coordinate with exchanges, and connect victims to trusted legal recovery — with full transparency and no false promises.
                 </p>
                 <button class="cta-button" onclick="sendEmail()" data-translate="start-case">Start My Case</button>
                 
@@ -1015,9 +1015,9 @@
         <div class="container">
             <div class="about-grid">
                 <div>
-                    <h2 style="font-size: clamp(2rem, 5vw, 3rem); font-weight: 700; margin-bottom: 24px;" data-translate="why-title">Why Asset Withdrawal Professionals?</h2>
+                    <h2 style="font-size: clamp(2rem, 5vw, 3rem); font-weight: 700; margin-bottom: 24px;" data-translate="why-title">Why Us?</h2>
                     <p style="font-size: clamp(16px, 2vw, 20px); color: var(--muted); margin-bottom: 32px; line-height: 1.7;" data-translate="founder-description">
-                        Founded by Henrik Svendsen — driven by a mission to protect victims of crypto scams and build safer digital markets.
+                        Founded by Henrik Svendsen, we protect crypto scam victims and restore trust in digital markets. Our team blends blockchain forensics, legal expertise, and exchange coordination to deliver real results. We provide transparency, no upfront fees, and honest expectations — unlike unreliable recovery schemes. From tracing stolen funds to legal action, we guide victims through every step with integrity and proven tools.
                     </p>
                     
                     <div class="features">
