--- a/index.html
+++ b/index.html
@@ -1064,7 +1064,7 @@
         <div class="container">
             <div class="section-header">
                 <h2 data-translate="services-title">Our Services</h2>
-                <p data-translate="services-subtitle">Comprehensive solutions to track, recover, and protect against crypto fraud</p>
+                <p data-translate="services-subtitle">End-to-end solutions to track, recover, and protect against crypto fraud — from first report to final resolution.</p>
             </div>
             
             <div class="services-grid">
@@ -1077,7 +1077,7 @@
                         </svg>
                     </div>
                     <h3 data-translate="service1-title">Crypto Tracing Reports</h3>
-                    <p data-translate="service1-description">Follow the money with forensic-level blockchain analysis and detailed transaction mapping.</p>
+                    <p data-translate="service1-description">Trace stolen funds with forensic blockchain analysis and precise transaction mapping..</p>
                 </div>
                 
                 <div class="service-card">
@@ -1166,8 +1166,8 @@
         <div class="container">
             <div class="cta-content">
                 <h2 data-translate="cta-title">Take the First Step Toward Justice</h2>
-                <p data-translate="cta-description">Every case strengthens the fight against crypto fraud. Even if full recovery isn't guaranteed, your report helps protect thousands of others.</p>
-                <button class="cta-button glow-button" onclick="sendEmail()" data-translate="start-case-now">Start My Case Now</button>
+                <p data-translate="cta-description">Your case matters. Even if full recovery isn’t guaranteed, your report strengthens the fight against crypto fraud and helps protect countless others.</p>
+                <button class="cta-button glow-button" onclick="sendEmail()" data-translate="start-case-now">Begin Recovery Process</button>
             </div>
         </div>
     </section>
@@ -1193,13 +1193,13 @@
                                 <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/>
                                 <polyline points="22,6 12,13 2,6"/>
                             </svg>
-                            <span>Blockchain@withdrawal.pro</span>
+                            <span>blockchain@withdrawal.pro</span>
                         </div>
                         <div class="contact-item">
                             <svg class="contact-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/>
                             </svg>
-                            <span data-translate="whatsapp-label">Whatsapp: +44 7379641887</span>
+                            <span data-translate="whatsapp-label">Whatsapp: +447379641887</span>
                         </div>
                     </div>
                 </div>
@@ -1234,7 +1234,7 @@
 
             <div class="footer-bottom">
                 <div class="copyright">
-                    <span data-translate="copyright">2024 Asset Withdrawal Professionals. All rights reserved.</span>
+                    <span data-translate="copyright">2025 Asset Withdrawal Professionals. All rights reserved.</span>
                 </div>
             </div>
         </div>
@@ -1422,7 +1422,7 @@ Best regards`);
                 'privacy-link': 'Politique de Confidentialité',
                 'compliance-link': 'Déclaration de Conformité',
                 'follow-title': 'Suivez-Nous',
-                'copyright': '© 2024 Professionnels du Retrait d\'Actifs. Tous droits réservés.'
+                'copyright': '© 2025 Professionnels du Retrait d\'Actifs. Tous droits réservés.'
             },
             nl: {
                 'company-name': 'Asset Withdrawal Professionals',
@@ -1493,7 +1493,7 @@ Best regards`);
                 'privacy-link': 'Privacybeleid',
                 'compliance-link': 'Compliance Verklaring',
                 'follow-title': 'Volg Ons',
-                'copyright': '© 2024 Asset Withdrawal Professionals. Alle rechten voorbehouden.'
+                'copyright': '© 2025 Asset Withdrawal Professionals. Alle rechten voorbehouden.'
             }
         };
 
