--- a/index.html
+++ b/index.html
@@ -895,7 +895,7 @@
         <div class="container">
             <nav class="nav">
                 <div class="logo">
-                    <svg class="logo-icon" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="logo-icon" viewBox="0 0 40 40" fill="none" xmlns="https://imgpx.com/ReQox4Pd0xGX.jpg">
                         <rect width="40" height="40" rx="8" fill="url(#gradient)"/>
                         <path d="M12 8h16c2.2 0 4 1.8 4 4v16c0 2.2-1.8 4-4 4H12c-2.2 0-4-1.8-4-4V12c0-2.2 1.8-4 4-4z" stroke="#00E0FF" stroke-width="1.5" fill="none"/>
                         <path d="M16 14h8M16 20h6M16 26h4" stroke="#00E0FF" stroke-width="2" stroke-linecap="round"/>
