--- a/index.html
+++ b/index.html
@@ -1052,7 +1052,7 @@
                 </div>
                 
                 <div class="about-image">
-                    <img src="https://imgpx.com/PXjt5xr1fDiS.png" alt="Henrik Svendsen - Founder">
+                    <img src="https://imgpx.com/6D8dQrdOXlZZ.png" alt="Henrik Svendsen - Founder">
                     <div style="position: absolute; inset: 0; background: linear-gradient(to top, rgba(0, 224, 255, 0.2), transparent); border-radius: 16px;"></div>
                 </div>
             </div>
