--- a/index.html
+++ b/index.html
@@ -1128,7 +1128,7 @@
             <div class="team-grid">
                 <div class="team-card">
                     <img src="https://imgpx.com/lvkuULthqTJo.png" alt="Financial Expert" class="team-avatar">
-                    <h3 data-translate="expert1-name">Sebastian Silverstein</h3>
+                    <h3 data-translate="expert1-name">George Schoulman</h3>
                     <div class="role" data-translate="expert1-role">Senior Blockchain Analyst</div>
                     <div class="experience" data-translate="expert1-experience">15 years experience</div>
                     <p data-translate="expert1-description">Specializes in cryptocurrency transaction analysis and forensic investigations with expertise in major blockchain networks.</p>
