--- a/index.html
+++ b/index.html
@@ -1094,7 +1094,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="team-member">
-                        <img src="https://ui-avatars.com/api/?name=Sarah+Müller&size=150&background=00d4aa&color=0a0a0a&bold=true" alt="Sarah Müller" class="team-photo">
+                        <img src="https://thispersondoesnotexist.tools/img/faces/avatar-1195906a734f1f532cb7f0f2e21018a9.jpg" alt="Sarah Müller" class="team-photo">
                         <h5>Sarah Müller</h5>
                         <p class="text-secondary">
                             <span class="lang lang-de">Leiterin Blockchain-Forensik</span>
