--- a/index.html
+++ b/index.html
@@ -1038,7 +1038,7 @@
             <div class="ceo-section">
                 <div class="row align-items-center">
                     <div class="col-lg-4 text-center mb-4 mb-lg-0">
-                        <img src="https://ui-avatars.com/api/?name=Dr+Maximilian+Weber&size=200&background=00d4aa&color=0a0a0a&bold=true" alt="Dr. Maximilian Weber" class="ceo-photo">
+                        <img src="https://thispersondoesnotexist.tools/img/faces/avatar-117c60fad6a3e1c072dd649def0213fd.jpg" alt="Dr. Maximilian Weber" class="ceo-photo">
                     </div>
                     <div class="col-lg-8">
                         <div class="ceo-name">Dr. Maximilian Weber</div>
