--- a/index.html
+++ b/index.html
@@ -1104,7 +1104,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="team-member">
-                        <img src="https://ui-avatars.com/api/?name=Thomas+Schmidt&size=150&background=00d4aa&color=0a0a0a&bold=true" alt="Thomas Schmidt" class="team-photo">
+                        <img src="https://thispersondoesnotexist.tools/img/faces/thispersondoesnotexist-44.jpg" alt="Thomas Schmidt" class="team-photo">
                         <h5>Thomas Schmidt</h5>
                         <p class="text-secondary">
                             <span class="lang lang-de">Leiter Compliance & Recht</span>
@@ -1124,7 +1124,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="team-member">
-                        <img src="https://ui-avatars.com/api/?name=Michael+Wagner&size=150&background=00d4aa&color=0a0a0a&bold=true" alt="Michael Wagner" class="team-photo">
+                        <img src="https://thispersondoesnotexist.tools/img/faces/avatar-11afd958a0fd3c0cc84368a23c2a27aa.jpg" alt="Michael Wagner" class="team-photo">
                         <h5>Michael Wagner</h5>
                         <p class="text-secondary">
                             <span class="lang lang-de">Leiter Technologie</span>
