--- a/index.html
+++ b/index.html
@@ -1114,7 +1114,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="team-member">
-                        <img src="https://ui-avatars.com/api/?name=Anna+Fischer&size=150&background=00d4aa&color=0a0a0a&bold=true" alt="Anna Fischer" class="team-photo">
+                        <img src="https://thispersondoesnotexist.tools/img/faces/avatar-110cb2148bf39309bfe53d6fbda5cc80.jpg" alt="Anna Fischer" class="team-photo">
                         <h5>Anna Fischer</h5>
                         <p class="text-secondary">
                             <span class="lang lang-de">Leiterin Asset Recovery</span>
